--- a/.gitignore
+++ b/.gitignore
@@ -386,6 +386,9 @@ FodyWeavers.xsd
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+# Project Exclusions
 **/frontend_env
+**/.venv
 **/postgres-data
 **/old
