--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.4
 colorlover==0.3.0
 dash==1.21.0
 dash-auth==1.4.1
+dash_core_components
 dash-bootstrap-components==0.12.2
 dash-core-components==1.17.1
 dash-daq==0.5.0
