--- a/requirements.txt
+++ b/requirements.txt
@@ -7,18 +7,16 @@ chart-studio==1.1.0
 click==8.0.1
 colorama==0.4.4
 colorlover==0.3.0
-dash==1.21.0
-dash-auth==1.4.1
-dash_core_components
-dash-bootstrap-components==0.12.2
-dash-core-components==1.17.1
-dash-daq==0.5.0
-dash-html-components==1.1.4
-dash-table==4.12.0
+dash
+dash-auth
+dash-bootstrap-components
+dash-daq
+dash-html-components
+dash-table
 decorator==4.4.2
-Flask==2.0.1
-Flask-Compress==1.10.1
-Flask-SeaSurf==0.3.0
+Flask
+Flask-Compress
+Flask-SeaSurf
 future==0.18.2
 google-api-core==1.31.2
 google-auth==1.35.0
@@ -32,9 +30,9 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 networkx==2.5.1
 numpy==1.21.1
-opencensus==0.7.13
-opencensus-context==0.1.2
-opencensus-ext-azure==1.0.8
+# opencensus==0.7.13
+# opencensus-context==0.1.2
+# opencensus-ext-azure==1.0.8
 orjson==3.6.0
 packaging==21.0
 pandas==1.3.0
@@ -46,7 +44,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyodbc==4.0.31
 pyparsing==2.4.7
-PySimpleSOAP==1.16.2
+#PySimpleSOAP==1.16.2
 python-dateutil==2.8.2
 pytz==2021.1
 redis==3.5.3
@@ -55,7 +53,7 @@ retrying==1.3.3
 rsa==4.7.2
 scipy==1.7.0
 six==1.16.0
-SQLAlchemy==1.4.22
+SQLAlchemy
 tenacity==8.0.1
 toml==0.10.2
 ua-parser==0.10.0
