--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ opencensus-ext-azure==1.0.8
 orjson==3.6.0
 packaging==21.0
 pandas==1.3.0
+paramiko==2.11.0
 plotly==5.1.0
 protobuf==3.17.3
 psutil==5.8.0
