--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,16 @@
-Brotli==1.0.9
 black
-cachetools==4.2.2
-certifi==2021.5.30
-charset-normalizer==2.0.3
-chart-studio==1.1.0
-click==8.0.1
-colorama==0.4.4
-colorlover==0.3.0
+colorlover
 dash
-dash-auth
 dash-bootstrap-components
 dash-daq
-dash-html-components
-dash-table
-decorator==4.4.2
-Flask
-Flask-Compress
-Flask-SeaSurf
-future==0.18.2
-google-api-core==1.31.2
-google-auth==1.35.0
-googleapis-common-protos==1.53.0
-greenlet==1.1.0
 gunicorn
 gevent
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-networkx==2.5.1
 numpy==1.21.1
-# opencensus==0.7.13
-# opencensus-context==0.1.2
-# opencensus-ext-azure==1.0.8
-orjson==3.6.0
-packaging==21.0
+orjson
+requests
 pandas==1.3.0
-plotly==5.1.0
-protobuf==3.17.3
-psutil==5.8.0
 psycopg2-binary
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
 pyodbc==4.0.31
-pyparsing==2.4.7
-#PySimpleSOAP==1.16.2
-python-dateutil==2.8.2
-pytz==2021.1
-redis==3.5.3
-requests==2.26.0
-retrying==1.3.3
-rsa==4.7.2
 scipy==1.7.0
-six==1.16.0
 SQLAlchemy
-tenacity==8.0.1
-toml==0.10.2
-ua-parser==0.10.0
-ujson==4.0.2
-urllib3==1.26.6
-waitress==2.0.0
-Werkzeug==2.0.1
+
