--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,58 @@
+async-timeout==4.0.2
+black==22.3.0
 Brotli==1.0.9
-black
-cachetools==4.2.2
-certifi==2021.5.30
-charset-normalizer==2.0.3
-chart-studio==1.1.0
-click==8.0.1
-colorama==0.4.4
+certifi==2022.6.15
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.5
 colorlover==0.3.0
-dash==1.21.0
-dash-auth==1.4.1
-dash_core_components
-dash-bootstrap-components==0.12.2
-dash-core-components==1.17.1
+dash==2.5.1
+dash-bootstrap-components==1.1.0
+dash-core-components==2.0.0
 dash-daq==0.5.0
-dash-html-components==1.1.4
-dash-table==4.12.0
-decorator==4.4.2
-Flask==2.0.1
-Flask-Compress==1.10.1
-Flask-SeaSurf==0.3.0
-future==0.18.2
-google-api-core==1.31.2
-google-auth==1.35.0
-googleapis-common-protos==1.53.0
-greenlet==1.1.0
-gunicorn
-gevent
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-networkx==2.5.1
+dash-html-components==2.0.0
+dash-table==5.0.0
+Deprecated==1.2.13
+Flask==2.1.2
+Flask-Compress==1.12
+gevent==21.12.0
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+mypy-extensions==0.4.3
 numpy==1.21.1
-opencensus==0.7.13
-opencensus-context==0.1.2
-opencensus-ext-azure==1.0.8
-orjson==3.6.0
-packaging==21.0
+orjson==3.7.2
+packaging==21.3
 pandas==1.3.0
 paramiko==2.11.0
-plotly==5.1.0
-protobuf==3.17.3
-psutil==5.8.0
-psycopg2-binary
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+pathspec==0.9.0
+pip==21.2.3
+platformdirs==2.5.2
+plotly==5.8.2
+psycopg2-binary==2.9.3
+pycparser==2.21
 pyodbc==4.0.31
-pyparsing==2.4.7
-PySimpleSOAP==1.16.2
+pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2021.1
-redis==3.5.3
-requests==2.26.0
-retrying==1.3.3
-rsa==4.7.2
+pytz==2022.1
+redis==4.3.3
+requests==2.28.0
 scipy==1.7.0
+setuptools==57.4.0
 six==1.16.0
-SQLAlchemy==1.4.22
+SQLAlchemy==1.4.37
 tenacity==8.0.1
-toml==0.10.2
-ua-parser==0.10.0
-ujson==4.0.2
-urllib3==1.26.6
-waitress==2.0.0
-Werkzeug==2.0.1
+tomli==2.0.1
+typing_extensions==4.2.0
+ujson==5.3.0
+urllib3==1.26.9
+Werkzeug==2.1.2
+wrapt==1.14.1
+zipp==3.8.0
+zope.event==4.5.0
+zope.interface==5.4.0
