--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ pycparser==2.21
 pyodbc==4.0.31
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.1
 redis==4.3.3
 requests==2.28.0
