--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 async-timeout==4.0.2
+backports.zoneinfo==0.2.1
+bcrypt==4.0.1
+black==23.1.0
 Brotli==1.0.9
 certifi==2022.6.15
 cffi==1.15.0
@@ -6,6 +9,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.5
 colorlover==0.3.0
+cryptography==39.0.0
 dash==2.5.1
 dash-bootstrap-components==1.1.0
 dash-core-components==2.0.0
@@ -26,27 +30,33 @@ MarkupSafe==2.1.1
 mypy-extensions==0.4.3
 numpy==1.21.1
 orjson==3.7.2
-packaging==21.3
+packaging==23.0
 pandas==1.3.0
 paramiko==2.11.0
 pathspec==0.9.0
 platformdirs==2.5.2
 plotly==5.8.2
+psycopg==3.1.8
+psycopg-binary==3.1.8
 psycopg2-binary==2.9.3
 pycparser==2.21
+PyNaCl==1.5.0
 pyodbc==4.0.31
 pyparsing==3.0.9
+python-dotenv==1.0.0
 python-dateutil==2.8.2
 pytz==2022.1
 redis==4.3.3
 requests==2.28.0
 scipy==1.7.0
 six==1.16.0
-SQLAlchemy==1.4.37
+SQLAlchemy==2.0.5.post1
+sqlalchemy-json==0.5.0
 tenacity==8.0.1
 tomli==2.0.1
 typing_extensions==4.2.0
 ujson==5.3.0
+upestatic @ file:///dependencies/upestatic-0.3.3-py3-none-any.whl
 urllib3==1.26.9
 Werkzeug==2.1.2
 wrapt==1.14.1
