--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@
 NEWPOSTGRESLOCATION = "georgia-db-test.postgres.database.azure.com"
 NEWPOSTGRESUSERID = "georgia"
 NEWPOSTGRESPASSWORD = "#dogs#dogs#dogs"
+
+USE_DEV_KEYS = "True"
