Calc eur mvp (#42)
* duplicate exisiting calculator page

* add .env

* update gitigno

* migrate requirements and engine

* misc edits

* update calc eur page inputs

* end of day commit

* update js

* update js

* calc page mvp

* black formatting

* Fix dependencies and image build process

* update calc page mvp

* finish calc page(except bottom buttons)

---------

Co-authored-by: fwf-upetrading <frederick.fillingham@upetrading.com>

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@
 NEWPOSTGRESLOCATION = "georgia-db-test.postgres.database.azure.com"
 NEWPOSTGRESUSERID = "georgia"
 NEWPOSTGRESPASSWORD = "#dogs#dogs#dogs"
+
+USE_DEV_KEYS = "True"
+
