add static data and calendar pages

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ NEWPOSTGRESPASSWORD = "#dogs#dogs#dogs"
 
 USE_DEV_KEYS = "True"
 
+RJO_SFTP_HOST = "sftp.rjobrien.com"
+RJO_SFTP_USER = "UPETRADING"
+RJO_SFTP_PASSWORD = "3BJB3hpTw4qBH68"
+
