Gf 70 update cash manager (#65)
* update cash manager

* formatting

* add total account req row

* small changes and pnl added

* first draft new cash manager

---------

Co-authored-by: marcelo amorelli <marcelo.amorelli@upetrading.com>
Co-authored-by: marceloupe <119584040+marceloupe@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.zoneinfo==0.2.1
 bcrypt==4.0.1
 black==23.1.0
 Brotli==1.0.9
+black
 certifi==2022.6.15
 cffi==1.15.0
 charset-normalizer==2.0.12
