--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ dash-table==5.0.0
 Deprecated==1.2.13
 Flask==2.1.2
 Flask-Compress==1.12
+flask_sqlalchemy==2.5.1
 gevent==21.12.0
 greenlet==1.1.2
 gunicorn==20.1.0
