--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,14 +25,14 @@ orjson = "*"
 paramiko = "2.11.0"
 jinja2 = "*"
 python-dotenv = "*"
-psycopg2 = "*"
+#psycopg2 = "*"
 # psycopg2-binary = "2.9.5"
 ujson = "*"
 "backports.zoneinfo" = "0.2.1"
 upestatic = { path = "dependencies/upestatic-0.0.1.4.6-py3-none-any.whl" }
 werkzeug = "2.2.2"
 python-dateutil = "*"
-
+gunicorn = "^20"
 
 [build-system]
 requires = ["poetry-core"]
