--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ gunicorn = "^20"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
 black = "^23.9.1"
+coverage = "^7.3.2"
+pytest-xdist = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
