--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,12 @@ werkzeug = "2.2.2"
 python-dateutil = "*"
 gunicorn = "^20"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.2"
+black = "^23.9.1"
+coverage = "^7.3.2"
+pytest-xdist = "^3.3.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
