--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ pytest = "^7.4.2"
 black = "^23.9.1"
 coverage = "^7.3.2"
 pytest-xdist = "^3.3.1"
+icecream = "*"
 
 [build-system]
 requires = ["poetry-core"]
