--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,39 +7,30 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.10"
-dash = "^2"
-numpy = "1.21.1"
-#pandas = "1.5.3"
-#flask_sqlalchemy = "2.5.1"
-#sqlalchemy = "1.4.47"
-pandas = "2"
-flask_sqlalchemy = "3.0.3"
-sqlalchemy = "2.0.18"
-scipy = "*"
-redis = "4.3.3"
+dash = "^2.15"
+numpy = "^1.26"
+pandas = { extras = ["performance", "pyarrow"], version = "^2.2.0" }
+flask_sqlalchemy = "^3.1"
+sqlalchemy = "^2.0.18"
+scipy = "^1.12"
+redis = { extras = ["hiredis"], version = "^5.0.1" }
 dash-bootstrap-components = "1.1.0"
-#flask = "2.1.2"
 flask = "*"
 dash_daq = "0.5.0"
 plotly = "5.8.2"
 colorlover = "0.3.0"
-requests = "2.28.0"
-pytz = "2021.1"
-orjson = "*"
-paramiko = "2.11.0"
-jinja2 = "*"
-python-dotenv = "*"
-# psycopg2-binary = "2.9.9"
+requests = "^2.31"
+pytz = "2024.1"
+orjson = "^3.9.14"
+paramiko = "^3.4"
+python-dotenv = "^1.0.1"
 ujson = "*"
-#"backports.zoneinfo" = "0.2.1"
-#upestatic = { path = "dependencies/upestatic-0.0.1.4.6-py3-none-any.whl" }
-upestatic = { path = "dependencies/upestatic-0.3.7.dev3+gf00800d.d20231204-py3-none-any.whl" }
-#upestatic = { path = "dependencies/upedata-0.5.3-py3-none-any.whl" }
 upedata = { path = "dependencies/upedata-0.6.1-py3-none-any.whl" }
-werkzeug = "2.2.2"
-python-dateutil = "*"
-gunicorn = "^20"
+werkzeug = "^3.0"
+python-dateutil = "^2.8.2"
+gunicorn = "^21.2"
 psycopg = { extras = ["binary"], version = "^3.1.14" }
+pyarrow = "^15.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
