--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["marcelo amorelli <marcelo.amorelli@upetrading.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.8.15"
+python = "^3.8.15"
 dash = "2.8.*"
 numpy = "1.21.1"
 pandas = "1.3.0"
