--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["marcelo amorelli <marcelo.amorelli@upetrading.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "~3.10"
+python = "~3.11"
 dash = "^2.15"
 numpy = "^1.26"
 pandas = { extras = ["performance", "pyarrow"], version = "^2.2.0" }
@@ -14,7 +14,7 @@ flask_sqlalchemy = "^3.1"
 sqlalchemy = "^2.0.18"
 scipy = "^1.12"
 redis = { extras = ["hiredis"], version = "^5.0.1" }
-dash-bootstrap-components = "1.1.0"
+dash-bootstrap-components = "^1.3.0"
 flask = "*"
 dash_daq = "0.5.0"
 plotly = "5.8.2"
