--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "4.0.0"
 description = "georgia frontend"
 authors = ["marcelo amorelli <marcelo.amorelli@upetrading.com>"]
 readme = "README.md"
-package-mode = false
+# package-mode = false
 
 [tool.poetry.scripts]
 run-main-frontend = "frontend.app:server"
