Move broken unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "4.0.0"
 description = "georgia frontend"
 authors = ["marcelo amorelli <marcelo.amorelli@upetrading.com>"]
 readme = "README.md"
-# package-mode = false
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
 
 [tool.poetry.scripts]
 run-main-frontend = "frontend.app:server"
